<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.MainActivity">
    <item
        android:id="@+id/action_history"
        android:icon="@drawable/ic_history_white"
        android:title="@string/history"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share_variant_white"
        android:title="@string/share_app"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_rate"
        android:icon="@drawable/ic_star_outline_white"
        android:title="@string/rate_app"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_notifications"
        android:icon="@drawable/ic_bell_white"
        android:title="@string/notifications"
        app:showAsAction="ifRoom" />
</menu>

