<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ll_banner"
        tools:context=".activity.MainActivity">

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            tools:context=".activity.MainActivity">

            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/logo_description"
                android:scaleType="center"
                android:src="@drawable/ic_logo_main_176dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="3dp"
                        android:gravity="center_horizontal"
                        android:text="@string/ethanol"
                        android:textColor="@android:color/white"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_ethanol"
                        style="@style/EditText"
                        android:imeOptions="actionNext"
                        android:selectAllOnFocus="true" />
                </LinearLayout>

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="27dp"
                    android:gravity="center_horizontal"
                    android:text="@string/separator"
                    android:textColor="@android:color/white"
                    android:textSize="28sp" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="3dp"
                        android:gravity="center_horizontal"
                        android:text="@string/gasoline"
                        android:textColor="@android:color/white"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_gasoline"
                        style="@style/EditText"
                        android:imeOptions="actionDone"
                        android:selectAllOnFocus="true" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:drawableEnd="@drawable/ic_ethanol_36dp"
                android:drawableRight="@drawable/ic_ethanol_36dp"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:text="@string/msg_require_ethanol"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_proportion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:text="@string/msg_result"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_calculate"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:text="@string/calculate"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:elevation="3dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_clear"
                style="@style/ButtonLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/clear"
                android:textSize="16sp"
                app:elevation="3dp" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:gravity="end"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/history"
                android:src="@drawable/ic_history"
                app:fabSize="mini" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/share_app"
                android:src="@drawable/ic_share_variant" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>